--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         
         <p>Click the button below to visit our developer page and explore all our games:</p>
         
-        <a href="https://play.google.com/store/apps/dev?id=你的开发者ID" class="play-store-link">
+        <a href="https://play.google.com/store/apps/developer?id=PrismGame" class="play-store-link">
             Find us on Google Play
         </a>
     </div>
